--- a/src/app/forms/register/register.component.html
+++ b/src/app/forms/register/register.component.html
@@ -1,1 +1,139 @@
-<p>register works!</p>
+<form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
+  <nz-form-item>
+    <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="请输入邮箱">
+      <nz-input-group  nzPrefixIcon="mail" nzSize="large">
+        <input nz-input formControlName="email" id="email" />
+      </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control nzErrorTip="请输入正确的验证码!">
+      <nz-input-group nzPrefixIcon="safety" nzSize="large">
+        <input
+          type="text"
+          nz-input
+          nzSize="large"
+          formControlName="checkCode"
+          placeholder="请输入验证码"
+        />
+      </nz-input-group>
+    </nz-form-control>
+    <!-- <img class="check-code" [src]="checkCode" (click)="changeCheckCodeImg()" /> -->
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control
+      [nzSm]="14"
+      [nzXs]="24"
+      nzErrorTip="Please input your nickname!"
+    >
+    <nz-input-group  nzPrefixIcon="user" nzSize="large">
+
+      <input nz-input id="nickname" formControlName="nickname" />
+    </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control
+      [nzSm]="14"
+      [nzXs]="24"
+      nzErrorTip="Please input your password!"
+    >
+      <nz-input-group
+        nzPrefixIcon="lock"
+        [nzSuffix]="suffixTemplate"
+        nzSize="large"
+      >
+        <input
+          nz-input
+          type="password"
+          id="password"
+          formControlName="password"
+          (ngModelChange)="updateConfirmValidator()"
+        />
+      </nz-input-group>
+
+      <ng-template #suffixTemplate>
+        <span
+          nz-icon
+          [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
+          nzTheme="outline"
+          (click)="passwordVisible = !passwordVisible"
+        ></span>
+      </ng-template>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="errorTpl">
+      <nz-input-group
+        nzPrefixIcon="lock"
+        [nzSuffix]="suffixTemplate1"
+        nzSize="large"
+      >
+        <input
+          nz-input
+          type="password"
+          formControlName="checkPassword"
+          id="checkPassword"
+        />
+        <ng-template #errorTpl let-control>
+          <ng-container *ngIf="control.hasError('required')"
+            >Please confirm your password!</ng-container
+          >
+          <ng-container *ngIf="control.hasError('confirm')">
+            Two passwords that you enter is inconsistent!
+          </ng-container>
+        </ng-template>
+        <ng-template #suffixTemplate1>
+          <span
+            nz-icon
+            [nzType]="checkPasswordVisible ? 'eye-invisible' : 'eye'"
+            nzTheme="outline"
+            (click)="checkPasswordVisible = !checkPasswordVisible"
+          ></span>
+        </ng-template>
+      </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <!--   <nz-form-item>
+    <nz-form-label
+      [nzSm]="6"
+      [nzXs]="24"
+      nzFor="captcha"
+      nzRequired
+      nzTooltipTitle="Please click 'Get captcha'"
+      [nzTooltipIcon]="captchaTooltipIcon"
+    >
+      Captcha
+    </nz-form-label>
+    <nz-form-control
+      [nzSm]="14"
+      [nzXs]="24"
+      nzErrorTip="Please input the captcha you got!"
+      nzExtra="We must make sure that your are a human."
+    >
+      <div nz-row [nzGutter]="8">
+        <div nz-col [nzSpan]="12">
+          <input nz-input formControlName="captcha" id="captcha" />
+        </div>
+        <div nz-col [nzSpan]="12">
+          <button nz-button (click)="getCaptcha($event)">Get captcha</button>
+        </div>
+      </div>
+    </nz-form-control>
+  </nz-form-item> -->
+  <!-- <nz-form-item nz-row class="register-area">
+    <nz-form-control [nzSpan]="14" [nzOffset]="6">
+      <label nz-checkbox formControlName="agree">
+        <span>
+          I have read the
+          <a>agreement</a>
+        </span>
+      </label>
+    </nz-form-control>
+  </nz-form-item> -->
+  <nz-form-item nz-row class="register-area">
+    <nz-form-control [nzSpan]="14" [nzOffset]="6">
+      <button nz-button nzType="primary">Register</button>
+    </nz-form-control>
+  </nz-form-item>
+</form>
