--- a/src/app/forms/register/register.component.html
+++ b/src/app/forms/register/register.component.html
@@ -1,43 +1,46 @@
 <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
   <nz-form-item>
-    <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="请输入邮箱">
-      <nz-input-group  nzPrefixIcon="mail" nzSize="large">
-        <input nz-input formControlName="email" id="email" />
+    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入正确邮箱">
+      <nz-input-group nzPrefixIcon="mail" nzSize="large">
+        <input
+          nz-input
+          formControlName="email"
+          id="email"
+          placeholder="请输入邮箱"
+        />
       </nz-input-group>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control nzErrorTip="请输入正确的验证码!">
+    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入正确的验证码!">
       <nz-input-group nzPrefixIcon="safety" nzSize="large">
         <input
           type="text"
           nz-input
-          nzSize="large"
           formControlName="checkCode"
           placeholder="请输入验证码"
         />
       </nz-input-group>
     </nz-form-control>
     <!-- <img class="check-code" [src]="checkCode" (click)="changeCheckCodeImg()" /> -->
+    <button nz-button nzType="primary" nzSize="large" class="check-email-code">
+      获取验证码
+    </button>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control
-      [nzSm]="14"
-      [nzXs]="24"
-      nzErrorTip="Please input your nickname!"
-    >
-    <nz-input-group  nzPrefixIcon="user" nzSize="large">
-
-      <input nz-input id="nickname" formControlName="nickname" />
-    </nz-input-group>
+    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入正确的昵称!">
+      <nz-input-group nzPrefixIcon="user" nzSize="large">
+        <input
+          nz-input
+          id="nickname"
+          formControlName="nickname"
+          placeholder="请输入昵称"
+        />
+      </nz-input-group>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control
-      [nzSm]="14"
-      [nzXs]="24"
-      nzErrorTip="Please input your password!"
-    >
+    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入符合规范的密码!">
       <nz-input-group
         nzPrefixIcon="lock"
         [nzSuffix]="suffixTemplate"
@@ -47,6 +50,7 @@
           nz-input
           type="password"
           id="password"
+          placeholder="请输入密码"
           formControlName="password"
           (ngModelChange)="updateConfirmValidator()"
         />
@@ -63,7 +67,7 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="errorTpl">
+    <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="errorTpl">
       <nz-input-group
         nzPrefixIcon="lock"
         [nzSuffix]="suffixTemplate1"
@@ -73,6 +77,7 @@
           nz-input
           type="password"
           formControlName="checkPassword"
+          placeholder="确定密码"
           id="checkPassword"
         />
         <ng-template #errorTpl let-control>
