feat(component):将登录注册以及获取邮箱验证码组件加入对话框逻辑中

--- a/src/app/forms/register/register.component.html
+++ b/src/app/forms/register/register.component.html
@@ -23,7 +23,7 @@
       </nz-input-group>
     </nz-form-control>
     <!-- <img class="check-code" [src]="checkCode" (click)="changeCheckCodeImg()" /> -->
-    <button nz-button nzType="primary" nzSize="large" class="check-email-code">
+    <button nz-button nzType="primary" nzSize="large" class="check-email-code" (click)="openDialog()">
       获取验证码
     </button>
   </nz-form-item>
@@ -48,7 +48,7 @@
       >
         <input
           nz-input
-          type="password"
+          [type]="passwordVisible ? 'text' : 'password' "
           id="password"
           placeholder="请输入密码"
           formControlName="password"
@@ -75,17 +75,17 @@
       >
         <input
           nz-input
-          type="password"
+          [type]="checkPasswordVisible ? 'text' : 'password' "
           formControlName="checkPassword"
           placeholder="确定密码"
           id="checkPassword"
         />
         <ng-template #errorTpl let-control>
           <ng-container *ngIf="control.hasError('required')"
-            >Please confirm your password!</ng-container
+            >请确认您的密码!</ng-container
           >
           <ng-container *ngIf="control.hasError('confirm')">
-            Two passwords that you enter is inconsistent!
+            两次输入的密码不一致 !
           </ng-container>
         </ng-template>
         <ng-template #suffixTemplate1>
@@ -99,46 +99,18 @@
       </nz-input-group>
     </nz-form-control>
   </nz-form-item>
-  <!--   <nz-form-item>
-    <nz-form-label
-      [nzSm]="6"
-      [nzXs]="24"
-      nzFor="captcha"
-      nzRequired
-      nzTooltipTitle="Please click 'Get captcha'"
-      [nzTooltipIcon]="captchaTooltipIcon"
-    >
-      Captcha
-    </nz-form-label>
-    <nz-form-control
-      [nzSm]="14"
-      [nzXs]="24"
-      nzErrorTip="Please input the captcha you got!"
-      nzExtra="We must make sure that your are a human."
-    >
-      <div nz-row [nzGutter]="8">
-        <div nz-col [nzSpan]="12">
-          <input nz-input formControlName="captcha" id="captcha" />
-        </div>
-        <div nz-col [nzSpan]="12">
-          <button nz-button (click)="getCaptcha($event)">Get captcha</button>
-        </div>
-      </div>
-    </nz-form-control>
-  </nz-form-item> -->
-  <!-- <nz-form-item nz-row class="register-area">
-    <nz-form-control [nzSpan]="14" [nzOffset]="6">
-      <label nz-checkbox formControlName="agree">
-        <span>
-          I have read the
-          <a>agreement</a>
-        </span>
-      </label>
-    </nz-form-control>
-  </nz-form-item> -->
   <nz-form-item nz-row class="register-area">
-    <nz-form-control [nzSpan]="14" [nzOffset]="6">
-      <button nz-button nzType="primary">Register</button>
+    <nz-form-control >
+      <button nz-button nzType="primary" type="submit" class="register-btn">注册</button>
     </nz-form-control>
   </nz-form-item>
 </form>
+
+<nz-modal [(nzVisible)]="isVisible" nzTitle="发送邮箱验证码" (nzOnCancel)="handleCancel()">
+  <ng-container *nzModalContent>
+    <app-check-code [email]="validateForm.controls.email.value"></app-check-code>
+  </ng-container>
+  <div *nzModalFooter>
+    <button nz-button nzType="primary" (click)="getEmailCheckCode()">发送验证码</button>
+  </div>
+</nz-modal>
