--- a/src/app/forms/login/login.component.scss
+++ b/src/app/forms/login/login.component.scss
@@ -1,6 +1,6 @@
-.login-form {
-  max-width: 300px;
-}
+// .login-form {
+//   max-width: 300px;
+// }
 
 .login-form-margin {
   margin-bottom: 16px;
