fix(component):添加邮箱验证码按钮阻止默认事件,防止其将所有控件都invalid

--- a/src/app/forms/register/register.component.html
+++ b/src/app/forms/register/register.component.html
@@ -23,7 +23,7 @@
       </nz-input-group>
     </nz-form-control>
     <!-- <img class="check-code" [src]="checkCode" (click)="changeCheckCodeImg()" /> -->
-    <button nz-button nzType="primary" nzSize="large" class="check-email-code" (click)="openDialog()">
+    <button nz-button nzType="primary" nzSize="large" class="check-email-code" (click)="openDialog($event)">
       获取验证码
     </button>
   </nz-form-item>
