feat(component):新增重置表单组件,并调整注册表单逻辑

--- a/src/app/forms/register/register.component.scss
+++ b/src/app/forms/register/register.component.scss
@@ -7,3 +7,16 @@
 .register-btn {
   width: 100%;
 }
+
+.check-code-panel {
+  width: 100%;
+  display: flex;
+}
+.no-email-code {
+  color: #409eff;
+  cursor: pointer;
+}
+.check-code {
+  margin-left: 5px;
+  cursor: pointer;
+}
