--- a/src/app/forms/reset-password/reset-password.component.html
+++ b/src/app/forms/reset-password/reset-password.component.html
@@ -1,1 +1,164 @@
-<p>reset-password works!</p>
+<form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
+  <nz-form-item>
+    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入正确邮箱">
+      <nz-input-group nzPrefixIcon="mail" nzSize="large">
+        <input
+          nz-input
+          formControlName="email"
+          id="email"
+          placeholder="请输入邮箱"
+        />
+      </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <div class="check-code-panel">
+      <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入正确的验证码!">
+        <nz-input-group nzPrefixIcon="safety" nzSize="large">
+          <input
+            type="text"
+            nz-input
+            formControlName="checkEmailCode"
+            placeholder="请输入验证码"
+          />
+        </nz-input-group>
+      </nz-form-control>
+      <!-- <img class="check-code" [src]="checkCode" (click)="changeCheckCodeImg()" /> -->
+      <button
+        nz-button
+        nzType="primary"
+        nzSize="large"
+        class="check-email-code"
+        (click)="openDialog($event)"
+      >
+        获取验证码
+      </button>
+    </div>
+    <div class="no-email-code" nz-popover [nzPopoverContent]="noEmailNotice">未收到验证码?</div>
+    <ng-template #noEmailNotice>
+      <div class="no-email-code-info">
+        <div class="item">1、在垃圾箱中查找邮箱验证码</div>
+        <div class="item">2、在邮箱中 头像->设置->反垃圾->白名单->设置邮件地址白名单</div>
+        <div class="item">3、将邮箱【laoluo@wuhancoder.com】添加到白名单</div>
+        <div class="item">
+          <a
+            class="a-link"
+            href="http://easybbs.wuhancoder.com/post/46lrsLUQjQhpZyP"
+            target="_blank"
+            >不知道怎么设置？</a
+          >
+        </div>
+      </div>
+    </ng-template>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入正确的昵称!">
+      <nz-input-group nzPrefixIcon="user" nzSize="large">
+        <input
+          nz-input
+          id="nickname"
+          formControlName="nickname"
+          placeholder="请输入昵称"
+        />
+      </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入符合规范的密码!">
+      <nz-input-group
+        nzPrefixIcon="lock"
+        [nzSuffix]="suffixTemplate"
+        nzSize="large"
+      >
+        <input
+          nz-input
+          [type]="passwordVisible ? 'text' : 'password'"
+          id="password"
+          placeholder="请输入密码"
+          formControlName="password"
+          (ngModelChange)="updateConfirmValidator()"
+        />
+      </nz-input-group>
+
+      <ng-template #suffixTemplate>
+        <span
+          nz-icon
+          [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
+          nzTheme="outline"
+          (click)="passwordVisible = !passwordVisible"
+        ></span>
+      </ng-template>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="errorTpl">
+      <nz-input-group
+        nzPrefixIcon="lock"
+        [nzSuffix]="suffixTemplate1"
+        nzSize="large"
+      >
+        <input
+          nz-input
+          [type]="checkPasswordVisible ? 'text' : 'password'"
+          formControlName="checkPassword"
+          placeholder="确定密码"
+          id="checkPassword"
+        />
+        <ng-template #errorTpl let-control>
+          <ng-container *ngIf="control.hasError('required')"
+            >请确认您的密码!</ng-container
+          >
+          <ng-container *ngIf="control.hasError('confirm')">
+            两次输入的密码不一致 !
+          </ng-container>
+        </ng-template>
+        <ng-template #suffixTemplate1>
+          <span
+            nz-icon
+            [nzType]="checkPasswordVisible ? 'eye-invisible' : 'eye'"
+            nzTheme="outline"
+            (click)="checkPasswordVisible = !checkPasswordVisible"
+          ></span>
+        </ng-template>
+      </nz-input-group>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-control nzErrorTip="请输入正确的验证码!">
+      <nz-input-group nzPrefixIcon="safety" nzSize="large">
+        <input
+          type="text"
+          nz-input
+          nzSize="large"
+          formControlName="checkCode"
+          placeholder="请输入验证码"
+        />
+      </nz-input-group>
+    </nz-form-control>
+    <img class="check-code" [src]="checkCode" (click)="changeCheckCodeImg()" />
+  </nz-form-item>
+  <nz-form-item nz-row class="register-area">
+    <nz-form-control>
+      <button nz-button nzType="primary" type="submit" class="register-btn">
+        注册
+      </button>
+    </nz-form-control>
+  </nz-form-item>
+</form>
+
+<nz-modal
+  [(nzVisible)]="isVisible"
+  nzTitle="发送邮箱验证码"
+  (nzOnCancel)="handleCancel()"
+>
+  <ng-container *nzModalContent>
+    <app-check-code
+      [email]="validateForm.controls.email.value"
+    ></app-check-code>
+  </ng-container>
+  <div *nzModalFooter>
+    <button nz-button nzType="primary" (click)="getEmailCheckCode()">
+      发送验证码
+    </button>
+  </div>
+</nz-modal>
