--- a/src/app/forms/register/check-code/check-code.component.html
+++ b/src/app/forms/register/check-code/check-code.component.html
@@ -10,5 +10,6 @@
     <nz-form-control [nzSpan]="14">
       <input nz-input name="checkCode" type="text" id="checkCode">
     </nz-form-control>
+    <img class="check-code" [src]="changeCheckCodeImg()" (click)="changeCheckCodeImg()" />
   </nz-form-item>
 </form>
