--- a/src/app/forms/login/login.component.scss
+++ b/src/app/forms/login/login.component.scss
@@ -18,3 +18,9 @@
   margin-left: 5px;
   cursor: pointer;
 }
+
+.login-form-footer {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10px;
+}
