--- a/src/app/forms/reset-password/reset-password.component.html
+++ b/src/app/forms/reset-password/reset-password.component.html
@@ -137,6 +137,11 @@
     </nz-form-control>
     <img class="check-code" [src]="checkCode" (click)="changeCheckCodeImg()" />
   </nz-form-item>
+  <div nz-row class="login-form-margin">
+    <div nz-col [nzSpan]="12" (click)="goToLogin()">
+      <span class="no-email-code">去登录?</span>
+    </div>
+  </div>
   <nz-form-item nz-row class="register-area">
     <nz-form-control>
       <button nz-button nzType="primary" type="submit" class="register-btn">
