--- a/src/app/forms/register/check-code/check-code.component.html
+++ b/src/app/forms/register/check-code/check-code.component.html
@@ -9,6 +9,10 @@
     <nz-form-label [nzSpan]="6">验证码</nz-form-label>
     <nz-form-control [nzSpan]="14">
       <input nz-input name="checkCode" type="text" id="checkCode">
+      <ng-template #checkCodeErrorTpl let-control>
+        <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('checkCode', 'required')}}</ng-container>
+        <ng-container *ngIf="control.hasError('pattern')">{{getErrorMessage('checkCode', 'pattern')}}</ng-container>
+      </ng-template>
     </nz-form-control>
     <img class="check-code" [src]="changeCheckCodeImg()" (click)="changeCheckCodeImg()" />
   </nz-form-item>
