--- a/src/app/forms/register/register.component.html
+++ b/src/app/forms/register/register.component.html
@@ -1,6 +1,6 @@
 <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
   <nz-form-item>
-    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入正确邮箱">
+    <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="emailErrorTpl">
       <nz-input-group nzPrefixIcon="mail" nzSize="large">
         <input
           nz-input
@@ -8,12 +8,16 @@
           id="email"
           placeholder="请输入邮箱"
         />
+        <ng-template #emailErrorTpl let-control>
+          <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('email', 'required')}}</ng-container>
+          <ng-container *ngIf="control.hasError('email')">{{getErrorMessage('email', 'email')}}</ng-container>
+        </ng-template>
       </nz-input-group>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
     <div class="check-code-panel">
-      <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入正确的验证码!">
+      <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="checkEmailCodeErrorTpl!">
         <nz-input-group nzPrefixIcon="safety" nzSize="large">
           <input
             type="text"
@@ -21,6 +25,10 @@
             formControlName="checkEmailCode"
             placeholder="请输入验证码"
           />
+          <ng-template #checkEmailCodeErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('checkCode', 'required')}}</ng-container>
+            <ng-container *ngIf="control.hasError('pattern')">{{getErrorMessage('checkCode', 'pattern')}}</ng-container>
+          </ng-template>
         </nz-input-group>
       </nz-form-control>
       <!-- <img class="check-code" [src]="checkCode" (click)="changeCheckCodeImg()" /> -->
@@ -52,7 +60,7 @@
     </ng-template>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入正确的昵称!">
+    <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="nicknameErrorTpl">
       <nz-input-group nzPrefixIcon="user" nzSize="large">
         <input
           nz-input
@@ -60,11 +68,14 @@
           formControlName="nickname"
           placeholder="请输入昵称"
         />
+        <ng-template #nicknameErrorTpl let-control>
+          <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('nickname', 'required')}}</ng-container>
+        </ng-template>
       </nz-input-group>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control [nzSm]="24" [nzXs]="24" nzErrorTip="请输入符合规范的密码!">
+    <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="passwordErrorTpl">
       <nz-input-group
         nzPrefixIcon="lock"
         [nzSuffix]="suffixTemplate"
@@ -78,6 +89,10 @@
           formControlName="password"
           (ngModelChange)="updateConfirmValidator()"
         />
+        <ng-template #passwordErrorTpl let-control>
+          <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('password', 'required')}}</ng-container>
+          <ng-container *ngIf="control.hasError('pattern')">{{getErrorMessage('password', 'pattern')}}</ng-container>
+        </ng-template>
       </nz-input-group>
 
       <ng-template #suffixTemplate>
@@ -91,7 +106,7 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="errorTpl">
+    <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="checkPasswordErrorTpl">
       <nz-input-group
         nzPrefixIcon="lock"
         [nzSuffix]="suffixTemplate1"
@@ -104,13 +119,9 @@
           placeholder="确定密码"
           id="checkPassword"
         />
-        <ng-template #errorTpl let-control>
-          <ng-container *ngIf="control.hasError('required')"
-            >请确认您的密码!</ng-container
-          >
-          <ng-container *ngIf="control.hasError('confirm')">
-            两次输入的密码不一致 !
-          </ng-container>
+        <ng-template #checkPasswordErrorTpl let-control>
+          <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('checkPassword', 'required')}}</ng-container>
+          <ng-container *ngIf="control.hasError('confirm')">{{getErrorMessage('checkPassword', 'confirm')}}</ng-container>
         </ng-template>
         <ng-template #suffixTemplate1>
           <span
@@ -124,7 +135,7 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control nzErrorTip="请输入正确的验证码!">
+    <nz-form-control [nzErrorTip]="checkCodeErrorTpl">
       <nz-input-group nzPrefixIcon="safety" nzSize="large">
         <input
           type="text"
@@ -133,6 +144,10 @@
           formControlName="checkCode"
           placeholder="请输入验证码"
         />
+        <ng-template #checkCodeErrorTpl let-control>
+          <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('checkCode', 'required')}}</ng-container>
+          <ng-container *ngIf="control.hasError('pattern')">{{getErrorMessage('checkCode', 'pattern')}}</ng-container>
+        </ng-template>
       </nz-input-group>
     </nz-form-control>
     <img class="check-code" [src]="checkCode" (click)="changeCheckCodeImg()" />
