--- a/src/app/forms/login/login.component.html
+++ b/src/app/forms/login/login.component.html
@@ -15,7 +15,7 @@
         />
         <ng-template #emailErrorTpl let-control>
           <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('email', 'required')}}</ng-container>
-          <ng-container *ngIf="control.hasError('pattern')">{{getErrorMessage('email', 'pattern')}}</ng-container>
+          <ng-container *ngIf="control.hasError('email')">{{getErrorMessage('email', 'pattern')}}</ng-container>
         </ng-template>
       </nz-input-group>
     </nz-form-control>
@@ -41,7 +41,7 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control [nzErrorTip]="checkCodeErrorTpl!">
+    <nz-form-control [nzErrorTip]="checkCodeErrorTpl">
       <nz-input-group nzPrefixIcon="safety" nzSize="large">
         <input
           type="text"
@@ -52,7 +52,7 @@
         />
         <ng-template #checkCodeErrorTpl let-control>
           <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('checkCode', 'required')}}</ng-container>
-          <!-- <ng-container *ngIf="control.hasError('pattern')">{{getErrorMessage('checkCode', 'pattern')}}</ng-container> -->
+          <ng-container *ngIf="control.hasError('pattern')">{{getErrorMessage('checkCode', 'pattern')}}</ng-container>
         </ng-template>
       </nz-input-group>
     </nz-form-control>
