--- a/src/app/forms/register/check-code/check-code.component.html
+++ b/src/app/forms/register/check-code/check-code.component.html
@@ -1,4 +1,4 @@
-<form nz-form>
+<form nz-form [formGroup]="validateForm">
   <nz-form-item>
     <nz-form-label [nzSpan]="6" nzFor="email">邮箱</nz-form-label>
     <nz-form-control [nzSpan]="14">
@@ -7,7 +7,7 @@
   </nz-form-item >
   <nz-form-item>
     <nz-form-label [nzSpan]="6">验证码</nz-form-label>
-    <nz-form-control [nzSpan]="14">
+    <nz-form-control [nzSpan]="14" [nzErrorTip]="checkCodeErrorTpl">
       <input nz-input name="checkCode" type="text" id="checkCode">
       <ng-template #checkCodeErrorTpl let-control>
         <ng-container *ngIf="control.hasError('required')">{{getErrorMessage('checkCode', 'required')}}</ng-container>
