--- a/src/app/forms/reset-password/reset-password.component.html
+++ b/src/app/forms/reset-password/reset-password.component.html
@@ -174,6 +174,7 @@
   <ng-container *nzModalContent>
     <app-check-code
       [email]="validateForm.controls.email.value"
+      [form]="checkCodeForm"
     ></app-check-code>
   </ng-container>
   <div *nzModalFooter>
