feat(component):新增发送邮箱验证码的校验

--- a/src/app/forms/register/register.component.html
+++ b/src/app/forms/register/register.component.html
@@ -175,6 +175,7 @@
     <app-check-code
       [email]="validateForm.controls.email.value"
       [form]="checkCodeForm"
+      [type]="type"
     ></app-check-code>
   </ng-container>
   <div *nzModalFooter>
