--- a/src/app/forms/reset-password/reset-password.component.html
+++ b/src/app/forms/reset-password/reset-password.component.html
@@ -175,6 +175,7 @@
     <app-check-code
       [email]="validateForm.controls.email.value"
       [form]="checkCodeForm"
+      [type]="type"
     ></app-check-code>
   </ng-container>
   <div *nzModalFooter>
