--- a/src/app/forms/register/register.component.html
+++ b/src/app/forms/register/register.component.html
@@ -176,6 +176,7 @@
       [email]="validateForm.controls.email.value"
       [form]="checkCodeForm"
       [type]="type"
+      #checkCodeCmp
     ></app-check-code>
   </ng-container>
   <div *nzModalFooter>
