--- a/src/app/forms/reset-password/reset-password.component.html
+++ b/src/app/forms/reset-password/reset-password.component.html
@@ -17,7 +17,7 @@
   </nz-form-item>
   <nz-form-item>
     <div class="check-code-panel">
-      <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="checkEmailCodeErrorTpl!">
+      <nz-form-control [nzSm]="24" [nzXs]="24" [nzErrorTip]="checkEmailCodeErrorTpl">
         <nz-input-group nzPrefixIcon="safety" nzSize="large">
           <input
             type="text"
@@ -180,7 +180,7 @@
     ></app-check-code>
   </ng-container>
   <div *nzModalFooter>
-    <button nz-button nzType="primary" (click)="getEmailCheckCode()">
+    <button nz-button nzType="primary" (click)="getEmailCheckCode()" [nzLoading]="isLoading">
       发送验证码
     </button>
   </div>
