--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,9 +11,17 @@
   }
 
   .user-info-panel {
+    display: flex;
+    align-items: center;
     .search-btn {
       margin: 0 5px;
     }
   }
+}
+
+.notification {
+  font-size: 20px;
+  padding: 5px;
+  color: #ccc;
 }
 
