--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -25,3 +25,27 @@
   color: #ccc;
 }
 
+.avatar {
+  margin-left: 10px;
+}
+.message-content {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+
+  nz-badge {
+    padding: 5px;
+  }
+}
+
+.menu {
+  li {
+    padding: 10px 10px;
+  }
+  // padding: 20px 5px;
+}
+
+header {
+  width: 1300px;
+  margin: 0 auto;
+}
