--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <app-header></app-header>
   </nz-header>
   <nz-content class="content">
-    <app-user-center></app-user-center>
+    <!-- <app-user-center></app-user-center> -->
   </nz-content>
   <nz-footer>
     <app-footer></app-footer>
