--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,3 @@
-
 .header-content {
   width: 80%;
   display: flex;
@@ -8,6 +7,14 @@
     font-size: 30px;
     display: block;
     margin-right: 5px;
+    flex: 1;
+    display: flex;
+
+    ul {
+      a {
+        font-size: 16px;
+      }
+    }
   }
 
   .user-info-panel {
