--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,13 @@ a {
 ul {
   list-style: none;
 }
+
+:root {
+  --text1: #9499A0;
+  --text2: #61666d;
+  --icon: #9499a0;
+  --text_link: #409eff;
+  --blue: #007fff;
+  --tag: #7BCDEF;
+  --pink: #FF6699;
+}
