--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -56,3 +56,19 @@ header {
   width: 1300px;
   margin: 0 auto;
 }
+
+.sub-board-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  .sub-board {
+    padding: 0 10px;
+    border-radius: 20px;
+    margin-right: 10px;
+    text-decoration: none;
+    background: rgb(231,230,230);
+    border: 1px solid #ddd;
+    margin-top: 10px;
+    color: #909090;
+}
+}
