feat(component):调整面板路由

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,10 @@
 <nz-layout>
   <nz-header>
-    <app-header></app-header>
+    <app-header [navArr]="navArr"></app-header>
   </nz-header>
   <nz-content class="content">
     <!-- <app-user-center></app-user-center> -->
+    <router-outlet></router-outlet>
   </nz-content>
   <nz-footer>
     <app-footer></app-footer>
