feat(component):创建文章列表组件和文章组件，集中type类型文件在一个文件夹

--- a/src/app/components/board-content/board-content.component.html
+++ b/src/app/components/board-content/board-content.component.html
@@ -1,4 +1,10 @@
 <p>board-content works!</p>
 <div class="sub-board">
-  <div class="board-item"></div>
+  <div class="board-item">
+    <a [routerLink]="'/forum/' + boardId" routerLinkActive [routerLinkActiveOptions]="{exact: true}">全部</a>
+  </div>
+  <div class="board-tiem" *ngFor="let item of tags">
+    <a [routerLink]="'/forum/' + boardId + '/' + item.boardId" routerLinkActive [routerLinkActiveOptions]="{exact: true}">{{ item.boardName}}</a>
+  </div>
 </div>
+<app-article-list></app-article-list>
